objects/Prospecting_Kit_Request__c.object
<CustomObject>
    <description>This object is has a lookup relationship to account.  It is a related list on the retail producer and prospect retail producer.</description>
    <fields>
        <fullName>Account_ID__c</fullName>
        <formula>Account__r.X18_Digit_Account_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Account object.  The person who requests the prospecting kit may be different than the account owner, therefore this is a lookup relationship.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Prospecting Kit Request</relationshipLabel>
        <relationshipName>Prospecting_Kit_Request</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Approved__c</fullName>
        <description>Date the prospecting kit was approved.</description>
        <label>Date Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Delivered__c</fullName>
        <description>Date the prospecting kit was delivered.</description>
        <label>Date Delivered</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Requested__c</fullName>
        <defaultValue>today()</defaultValue>
        <label>Date Requested</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Local_Hire__c</fullName>
        <description>Local Hire</description>
        <label>Local Hire</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Requested</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Delivered</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Prospecting Kit Request</label>
    <nameField>
        <displayFormat>Kit ID-{0000}</displayFormat>
        <label>Kit ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Prospecting Kit Request</pluralLabel>
    <recordTypes>
        <fullName>Swine_Prospecting_Kit</fullName>
        <active>true</active>
        <description>Swine Prospecting Kit Request</description>
        <label>Swine Prospecting Kit</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>